# llm-finetuning

./: .env.example  .gitignore  AGENTS.md  COMPLETE_GUIDE copy.md  Makefile  NEXT_STEPS.md  README.md  SERVING.md  claude.md  pyproject.toml  setup_env.sh  setup_project.sh
configs/evaluation/: math.yaml  medical_vqa.yaml  translation.yaml
configs/export/: onnx.yaml
configs/gpu/: dpo_config.yaml  grpo_config.yaml  kto_config.yaml  orpo_config.yaml  sft_config.yaml  sft_math_config.yaml  sft_medical_vqa_vlm.yaml  simpo_config.yaml
configs/gpu/deepspeed/: ds_zero2.json
configs/gpu/fsdp/: accelerate_fsdp.yaml
configs/gpu/profiles/: a100_80gb.yaml  a10_24gb.yaml  h100_80gb.yaml  t4_16gb.yaml
configs/inference/: math_sglang.yaml  math_vllm.yaml  medical_vqa_hf.yaml  mlx_local.yaml  translation_sglang.yaml  translation_vllm.yaml
configs/mlx/: sft_korean_translation.yaml  sft_math_reasoning.yaml  vlm_medical_vqa.yaml
data/scripts/: generate_math_preferences.py  prepare_math_data.py  prepare_medical_vqa_data.py  prepare_translation_data.py  txt_to_jsonl.py
data/tests/: prompts1.jsonl  prompts1.txt
requirements/: requirements-base.txt  requirements-gpu.txt  requirements-mlx.txt
scripts/common/: wandb_weave_tracing.py
scripts/eval/: __init__.py  eval_math.py  eval_medical_vqa.py  eval_translation.py
scripts/export/: __init__.py  export_onnx.py  export_tensorrt_llm.md
scripts/gpu/: evaluate_helm.py  evaluate_lm_harness.py  inference_sglang.py  inference_unified.py  inference_vllm.py  inference_vlm.py  merge_lora.py  train_dpo.py  train_grpo.py  train_kto.py  train_orpo.py  train_sft.py  train_simpo.py  train_vlm_sft.py
scripts/mlx/: evaluate.py  inference_vlm.py  train_sft.py  train_vlm_sft.py
src/data/: data_loader.py  manifest.py  preferences.py
src/evaluation/: translation_metrics.py  vqa_metrics.py
src/rewards/: math_reward.py
src/training/: config_utils.py  sanity.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_math_reward.py  test_mlx_training.py  test_pipeline_smoke.py  test_translation_metrics.py  test_vqa_metrics.py
